--- a/.env
+++ b/.env
@@ -24,7 +24,7 @@ APP_SECRET=83a6fd5754e485277b95b5fe5c5328eb
 # Format described at http://docs.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
 # For an SQLite database, use: "sqlite:///%kernel.project_dir%/var/data.db"
 # Configure your db driver and server_version in config/packages/doctrine.yaml
-DATABASE_URL=mysql://root:@127.0.0.1:3306/altic
+DATABASE_URL=mysql://root:root@127.0.0.1:3306/altic
 ###< doctrine/doctrine-bundle ###
 
 ###> symfony/swiftmailer-bundle ###
