--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,9 @@
         "symfony/twig-bundle": "4.2.*",
         "symfony/validator": "4.2.*",
         "symfony/web-link": "4.2.*",
-        "symfony/yaml": "4.2.*"
+        "symfony/webpack-encore-bundle": "^1.1",
+        "symfony/yaml": "4.2.*",
+        "twbs/bootstrap": "^4.2"
     },
     "require-dev": {
         "doctrine/doctrine-fixtures-bundle": "^3.1",
