--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,6 @@
         "symfony/twig-bundle": "4.2.*",
         "symfony/validator": "4.2.*",
         "symfony/web-link": "4.2.*",
-        "symfony/webpack-encore-bundle": "^1.1",
         "symfony/yaml": "4.2.*",
         "twbs/bootstrap": "^4.2"
     },
@@ -34,7 +33,9 @@
         "symfony/maker-bundle": "^1.11",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.2.*"
+        "symfony/web-server-bundle": "4.2.*",
+        "symfony/webpack-encore-bundle": "^1.2",
+        "symfony/webpack-encore-pack": "^1.0"
     },
     "config": {
         "preferred-install": {
