--- a/composer.json
+++ b/composer.json
@@ -33,9 +33,7 @@
         "symfony/maker-bundle": "^1.11",
         "symfony/profiler-pack": "*",
         "symfony/test-pack": "*",
-        "symfony/web-server-bundle": "4.2.*",
-        "symfony/webpack-encore-bundle": "^1.2",
-        "symfony/webpack-encore-pack": "^1.0"
+        "symfony/web-server-bundle": "4.2.*"
     },
     "config": {
         "preferred-install": {
